kubernetes-ingress-hello-world.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: kubernetes-ingress-hello-world
  annotations:
    ingress.kubernetes.io/ssl-redirect: "true"
    ingress.kubernetes.io/rewrite-target: /
    enable-vts-status: "true"
spec:
  # SSLDHParam
  tls:
  - secretName: tls-certificate
    hosts:
    - greetings.toall
  backend:
    serviceName: default-http-backend
    servicePort: 80
  rules:
  - host: echo.toall
    http:
      paths:
      - path: /
        backend:
          serviceName: echoserver
          servicePort: 8080
  - host: greetings.toall
    http:
      paths:
      - path: /munich
        backend:
          serviceName: munich
          servicePort: 80
      - path: /paris
        backend:
          serviceName: paris
          servicePort: 80
